# toy-project

./: .gitignore  CMakeLists.txt  README.md  aarch64-compile.sh
common/: dpcnn.cpp  dpcnn.h  util.cpp  util.h
dpcnn/: CMakeLists.txt
dpvision/: CMakeLists.txt
dpvision/dpvision/: fd_example_cls.cpp  fd_example_cls.hpp
dpvision/face_detect/: CMakeLists.txt  base_face_detect.h  face_align.cpp  face_align.h
dpvision/face_detect/mtcnn/: det1.mem.28052.h  det2.mem.403416.h  det3.mem.398620.h  mtcnn.cpp  mtcnn.h
dpvision/human_foreground/: guidedfilter.cpp  guidedfilter.h  human_foreground.cpp  human_foreground.h
mnn_core/: mnn_wrapper.cpp  mnn_wrapper.h
test/: .gitignore  CMakeLists.txt  mtcnn_config.txt
